--- a/smoothy-sample/src/main/res/values/strings.xml
+++ b/smoothy-sample/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_detail">DetailActivity</string>
+    <string name="display_detail">Display Detail</string>
+    <string name="start_service">Start service</string>
 </resources>
